syntax = "proto3";

package greet;

option go_package = "github.com\\zhandaaaulet\\grpc-go-course\\greet\\greetpb;greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManyTimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

message Sum{
  int64 firstNumber = 1;
  int64  secondNumber = 2;
}

message SumRequest{
  Sum sum = 1;
}

message SumResponse{
  string res = 1;
}

service GreetService{
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  //Server streaming rpc
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
  //Client streaming rpc
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
  // Bidirectional streaming
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
  //Unary
  rpc CalculateSum(SumRequest) returns(SumResponse){};
}